TD-2755: comment out workaround to LT-11509; there's something weird going on with the multiple calls to StreamReplaceInFile() that might be leaving the temporary files open too long (or calls from another process?). FixInvalidXhtml() ends up getting called 6 times during OOo export.

--- a/pathway/PsSupport/Styles/Scripture/epub_Scripture.css
+++ b/pathway/PsSupport/Styles/Scripture/epub_Scripture.css
@@ -223,6 +223,7 @@ the user's preferences from the Configuration Tool:
     margin-left : 0;
     padding-bottom : 2%;
     padding-top : 2%;
+    line-height:125%;
 }
 .Title_Secondary {
     display: block;
